tests/paczka2/big_fuzzy/34070916.err
Error in line 6: iQjojhlbYY A785 49,5
Error in line 5: A785 A785 61,9
Error in line 16: MpPOY S406 43,6
Error in line 18: BGDwQJqbZ S406 23,1
Error in line 32: BGDwQJqbZ S594 -3,2
Error in line 33: T3lJ0U4Oj A785 61,4
Error in line 47: t9LFuqhsWbs S406 69,1
Error in line 23: iQjojhlbYY S910 81,7
Error in line 60: A785 S910 135,53
Error in line 57: iQjojhlbYY A785 53,1
Error in line 30: BGDwQJqbZ S594 55,4
Error in line 68: t9LFuqhsWbs A785 -3,8
Error in line 71: T3lJ0U4Oj S910 22,4
Error in line 56: A785 S910 28,6
Error in line 76: A785 S406 17,2
Error in line 93: ySu7wTgUps S406 38,4
Error in line 87: MpPOY A785 212,0
Error in line 94: ySu7wTgUps A785 49,5
Error in line 103: ySu7wTgUps S406 26,6
Error in line 109: t9LFuqhsWbs A785 6,2
Error in line 110: ySu7wTgUps S910 34,8
Error in line 108: iQjojhlbYY A785 82,4
Error in line 115: ySu7wTgUps S406 62,6
Error in line 123: MpPOY A785 62S3
Error in line 125: MpPOY S¡06 81,0
Error in line 96: A785 S910 275,9
Error in line 124: MpPOY S406 82,7
Error in line 158: T3lJ0U4Oj S406 214,2
Error in line 171: A785 S594 984,2
Error in line 164: T3lJ0U4Oj S594 82,0
Error in line 173: A785 S910 89,0
Error in line 190: MpPOY S406 95,7
Error in line 198: t9LFuqhsWbs S910 48,0
Error in line 186: BGDwQJqbZ S594 436,6
Error in line 207: BGDwQJqbZ A785 21,0
Error in line 203: T3lJ0U4Oj S910 85,8
Error in line 208: BGDwQJqbZ S910 66,3
Error in line 221: t9LFuqhsWbs S406 96,1
Error in line 225: T3lJ0U4Oj S406 95,9
Error in line 232: iQjojhlbYY S910 25,5
Error in line 234: t9LFuqhsWbs S910 153,3
Error in line 231: T3lJ0U4Oj S594 96,3
